AC_PREREQ([2.63])
AC_INIT([iceboy], [0.1])
AC_CONFIG_SRCDIR([src/top.v])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([foreign dist-bzip2 filename-length-max=99 no-dependencies tar-ustar])
AM_MAINTAINER_MODE

MY_CHECK_WS

MY_PROG_YOSYS
MY_PROG_ARACHNE
MY_PROG_ICEPACK
MY_PROG_ICEPLL
MY_PROG_ICEPROG

AC_CONFIG_FILES([
src/Makefile
Makefile
])

AC_OUTPUT
